jvm添加笔记